<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="compose">Compose</string>
	<string name="add_account">Add account</string>
	<string name="settings">Settings</string>
	<string name="send">Send</string>
	<string name="add_location">Add location</string>
	<string name="add_image">Add image</string>
	<string name="take_photo">Take photo</string>
	<string name="remove_location">Remove location</string>
	<string name="remove_image">Remove image</string>
	<string name="remove_photo">Remove photo</string>
	<string name="status_hint">What\'s happening ?</string>
	<string name="sign_up">Sign up</string>
	<string name="sign_in">Sign in</string>
	<string name="rest_base_url">REST Base URL</string>
	<string name="oauth_base_url">OAuth Base URL</string>
	<string name="signing_oauth_base_url">Signing OAuth Base URL</string>
	<string name="signing_rest_base_url">Signing REST Base URL</string>
    <string name="api_url_format">API URL Format</string>
    <string name="same_oauth_signing_url">Use same URL for OAuth signing</string>
	<string name="auth_type">Auth type</string>
	<string name="oauth">OAuth</string>
	<string name="xauth">xAuth</string>
	<string name="basic">Basic</string>
	<string name="twip_o">twip O Mode</string>
	<string name="advanced">Advanced</string>
	<string name="save">Save</string>
	<string name="edit">Edit</string>
	<string name="edit_api">Edit API</string>
	<string name="home">Home</string>
	<string name="mentions">Mentions</string>
	<string name="error_occurred">An error occurred, please try again.</string>
    <string name="error_already_logged_in">You have already logged in.</string>
	<string name="no_account_selected">No account selected.</string>
	<string name="empty_account_selection_disallowed">Please select at least one account.</string>
	<string name="error_unknown_error">Error: Unknown error, this is probably a bug.</string>
	<string name="error_message">Error: <xliff:g id="message">%s</xliff:g></string>
	<string name="error_message_with_action">Error while <xliff:g id="action">%1$s</xliff:g>: <xliff:g id="message">%2$s</xliff:g></string>
	<string name="error_message_rate_limit">Twitter\'s rate limit exceeded, please retry <xliff:g id="time">%s</xliff:g></string>
	<string name="error_message_rate_limit_with_action">Twitter\'s rate limit exceeded while <xliff:g id="action">%1$s</xliff:g>, please retry <xliff:g id="time">%2$s</xliff:g></string>
	<string name="select_account">Select account</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="label_tweetstore_provider">Twittnuker database provider</string>
	<string name="label_refresh_service">Refresh service</string>
	<string name="label_background_operation_service">Background operation service</string>
	<string name="open_in_browser">Open in browser</string>
	<string name="tap_to_load_more">Tap to load more</string>
	<string name="delete">Delete</string>
	<string name="retweet">Retweet</string>
    <string name="retweets">Retweets</string>
	<string name="cancel_retweet">Cancel retweet</string>
	<string name="favorite">Favorite</string>
	<string name="unfavorite">Unfavorite</string>
	<string name="reply">Reply</string>
	<string name="share">Share</string>
	<string name="share_via_twittnuker" translateable="false">Twittnuker</string>
	<string name="view_image">Image</string>
	<string name="view_map">Map</string>
	<string name="view_status">View tweet</string>
	<string name="view_user_profile">User profile</string>
	<string name="browser">Browser</string>
	<string name="pick_from_gallery">Pick from gallery</string>
	<string name="statuses">Tweets</string>
	<string name="followers">Followers</string>
	<string name="following">Following</string>
	<string name="about">About</string>
	<string name="open_source_license">Open source license</string>
	<string name="api">API</string>
	<string name="default_api_settings">Default API settings</string>
	<string name="default_api_settings_summary">These settings only apply to newly logged-in accounts</string>
	<string name="consumer_key">Consumer key</string>
	<string name="consumer_secret">Consumer secret</string>
	<string name="ignore_ssl_error">Ignore SSL Error</string>
	<string name="ignore_ssl_error_summary">Ignore SSL Error, enable this if you are having problems with custom API server.</string>
	<string name="gzip_compressing">GZip compressing</string>
	<string name="gzip_compressing_summary">Compress all API requests, it can reduce data usage, but may not work on all API servers.</string>
	<string name="storage">Storage</string>
	<string name="database_item_limit">Database size limit</string>
	<string name="database_item_limit_summary">Upper limit of items stored in databases for each account, set to a smaller value to save space and increase loading speed.</string>
	<string name="clear_cache">Clear cache</string>
	<string name="clear_cache_summary">Clear stored profile image cache.</string>
	<string name="clear_databases">Clear databases</string>
	<string name="clear_databases_summary">Clear all tweets, profiles, messages. Your account credentials won\'t be lost.</string>
	<string name="look_and_feel">Look and feel</string>
	<string name="display_profile_image">Display profile image</string>
	<string name="image_load_summary">Disabling this will increase list scroll speed and reduce data usage.</string>
	<string name="in_reply_to_name">In reply to <xliff:g id="user_name">%s</xliff:g></string>
    <string name="name_retweeted"><xliff:g id="user_name">%s</xliff:g> retweeted</string>
    <string name="name_and_another_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and another retweeted</string>
    <string name="name_and_count_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others retweeted</string>
    <string name="N_retweeted_quantity_one"><xliff:g id="retweet_count">%d</xliff:g> retweet</string>
    <string name="N_retweeted_quantity_other"><xliff:g id="retweet_count">%d</xliff:g> retweets</string>
    <string name="retweeted_by_name">Retweeted by <xliff:g id="user_name">%s</xliff:g></string>
    <string name="retweeted_by_name_with_count">Retweeted by <xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others</string>
    <string name="retweeted_by_count">Retweeted by <xliff:g id="retweet_count">%d</xliff:g> users</string>
	<string name="users_retweeted_this">Users retweeted this</string>
    <string name="users_favorited_this">Users favorited this</string>
	<string name="content">Content</string>
	<string name="set_color">Set color</string>
	<string name="leftside_compose_button">Left side compose button</string>
	<string name="leftside_compose_button_summary">Put the compose button on the left.</string>
	<string name="load_item_limit">Load item limit</string>
	<string name="load_item_limit_summary">Set items limit per load.</string>
	<string name="load_more_automatically">Load more content automatically</string>
	<string name="load_more_automatically_summary">Load more content (e.g. photos, maps, tweets) automatically</string>
	<string name="quote_format">Quote format</string>
	<string name="quote_format_summary">\"[TEXT]\" = Tweet text\n\"[NAME]\" = Twitter username</string>
	<string name="direct_messages">Messages</string>
	<string name="remember_position">Remember position</string>
	<string name="remember_position_summary">Remember list/tab position before closing Twittnuker</string>
	<string name="notifications_type">Notifications type</string>
	<string name="notifications">Notifications</string>
	<string name="trends_location">Trends location</string>
	<string name="trends_location_summary">Set location for local trends.</string>
	<string name="accounts">Accounts</string>
	<string name="notification_ringtone">Ringtone</string>
	<string name="notification_light_color">Light Color</string>
	<string name="share_format">Share format</string>
	<string name="share_format_summary">\"[TITLE]\" = Content title\n\"[TEXT]\" = Content text</string>
	<string name="content_and_storage">Content &amp; Storage</string>
	<string name="image_uploader">Image uploader</string>
    <string name="status_shortener">Tweet shortener</string>
	<string name="multimedia_contents">Multimedia content</string>
	<string name="preview">Preview</string>
	<string name="connection_timeout">Connection timeout</string>
	<string name="silent_notifications">Silent notifications</string>
	<string name="silent_notifications_summary">Disable ringtone/vibrate for notifications</string>
	<string name="donate">Donate</string>
	<string name="display_sensitive_contents">Display sensitive contents</string>
	<string name="display_sensitive_contents_summary">Display sensitive contents without notice in timeline</string>
	<string name="clear_search_history">Clear search history</string>
	<string name="fast_scroll_thumb">Fast scroll thumb</string>
	<string name="phishing_link_warning">Phishing link warning</string>
	<string name="phishing_link_warning_summary">Warn you when are trying to open a possibly phishing link in a direct message.</string>
	<string name="image_preload_options">Image preload options</string>
	<string name="preload_wifi_only">Preload using Wi-Fi only</string>
	<string name="disable_tab_swipe">Disable tab swipe</string>
    <string name="disable_tab_swipe_summary"></string>
	<string name="theme_color">Theme color</string>
    <string name="action_bar_color">Action bar color</string>
	<string name="link_to_quoted_status">Link to quoted tweet</string>
	<string name="background_toast_notification">Background Toast notification</string>
	<string name="background_toast_notification_summary">Show Toast notification when switched to background</string>
	<string name="theme">Theme</string>
	<string name="settings_interface">Interface</string>
	<string name="safety">Safety</string>
	<string name="settings_wizard">Settings wizard</string>
	<string name="wizard_page_welcome_title">Welcome</string>
	<string name="wizard_page_welcome_yes">Yes</string>
	<string name="wizard_page_welcome_not_now">Not now</string>
	<string name="wizard_page_welcome_import_settings">Import settings</string>
	<string name="add_to_filter">Add to filter</string>
	<string name="unread_count">Unread count</string>
	<string name="developed_by">Developer</string>
	<string name="project_account">Project account</string>
	<string name="special_thanks_to">Special thanks to</string>
	<string name="general">General</string>
	<string name="tab_display_option">Tab display option</string>
	<string name="long_click_to_open_menu">Long click to open menu</string>
    <string name="translation_destination">Translation destination</string>
    <string name="hidden_settings">Hidden settings</string>
    <string name="force_using_private_apis">Force using private APIs</string>
    <string name="status_text_limit">Tweet text limit</string>
    <string name="load_more_from_top">Load more from top</string>
    <string name="load_more_from_top_summary">Useful if you prefer to read from bottom to top</string>
    <string name="open_with_account">Open with account</string>
    <string name="timeline_sync_service">Timeline sync service</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="font_family">Font family</string>
    <string name="unread_count_summary">Counter for unread tweets and messages in the tab</string>
    <string name="donate_twidere_via_paypal">Donate Twidere via PayPal</string>
    <string name="donate_twidere_via_paypal_summary">Donate to the original Twidere Project via PayPal</string>
    <string name="contact">Contact</string>
    <string name="mail">Mail</string>
    <string name="mail_summary">Send mail to mail@twittnuker.org to report bugs or request features</string>
    <string name="twidere_developed_by">Based on Twidere</string>
    <string name="love">Love</string>
</resources>