<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/settings_interface">

	<de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
		android:defaultValue="true"
		android:key="unread_count"
		android:title="@string/unread_count"
		android:summary="@string/unread_count_summary"/>

	<de.vanita5.twittnuker.preference.LeftsideComposeButtonPreference
		android:defaultValue="false"
		android:key="leftside_compose_button"
		android:summary="@string/leftside_compose_button_summary"
		android:title="@string/leftside_compose_button"/>
	<de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
		android:defaultValue="false"
		android:key="fast_scroll_thumb"
		android:title="@string/fast_scroll_thumb"/>
	<de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
		android:defaultValue="false"
		android:key="disable_tab_swipe"
		android:title="@string/disable_tab_swipe"
        android:summary="@string/disable_tab_swipe_summary"/>

    <de.vanita5.twittnuker.preference.AutoInvalidateListPreference
        android:defaultValue="@string/default_tab_display_option"
        android:entries="@array/entries_tab_display_option"
        android:entryValues="@array/values_tab_display_option"
        android:key="tab_display_option"
        android:summary="%s"
        android:title="@string/tab_display_option"/>

	<de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
	    android:defaultValue="true"
	    android:key="long_click_to_open_menu"
	    android:title="@string/long_click_to_open_menu"
        android:summary="@string/long_click_to_open_menu_summary"/>

</PreferenceScreen>