<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:twittnuker="http://schemas.android.com/apk/res/de.vanita5.twittnuker"
	android:title="@string/notifications">

	<de.vanita5.twittnuker.preference.RingtonePreference
		android:key="notification_ringtone"
		android:title="@string/notification_ringtone"/>

	<de.vanita5.twittnuker.preference.ColorPickerPreference
		android:defaultValue="@android:color/holo_blue_dark"
		android:key="notification_light_color"
		android:title="@string/notification_light_color"/>

	<PreferenceCategory
		android:key="cat_notifications_type"
		android:title="@string/notifications_type">
		<de.vanita5.twittnuker.preference.NotificationTypePreference
			android:key="notification_type_home"
			android:title="@string/home"
			twittnuker:notificationType="none"/>
		<de.vanita5.twittnuker.preference.NotificationTypePreference
			android:key="notification_type_mentions"
			android:title="@string/mentions"
			twittnuker:notificationType="vibration|light"/>
		<de.vanita5.twittnuker.preference.NotificationTypePreference
			android:key="notification_type_direct_messages"
			android:title="@string/direct_messages"
			twittnuker:notificationType="ringtone|vibration|light"/>
	</PreferenceCategory>

</PreferenceScreen>