<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/theme">

	<PreferenceCategory
		android:key="cat_theme_preview"
        android:order="11"
        android:title="@string/preview">
		<de.vanita5.twittnuker.preference.ThemePreviewPreference android:key="theme_preview"/>
	</PreferenceCategory>

	<de.vanita5.twittnuker.preference.SummaryListPreference
		android:defaultValue="light"
		android:entries="@array/entries_theme"
		android:entryValues="@array/values_theme"
		android:key="theme"
        android:order="21"
        android:title="@string/style"/>

    <de.vanita5.twittnuker.preference.ColorPickerPreference
        android:defaultValue="@android:color/holo_blue_light"
        android:key="theme_color"
        android:order="22"
        android:title="@string/theme_color"/>

    <de.vanita5.twittnuker.preference.ColorPickerPreference
        android:defaultValue="@color/twittnuker_material_dark"
        android:key="action_bar_color"
        android:order="23"
        android:title="@string/action_bar_color"/>

    <de.vanita5.twittnuker.preference.ThemeBackgroundPreference
		android:defaultValue="default"
        android:order="25"
        android:title="@string/color"/>

    <de.vanita5.twittnuker.preference.ThemeFontFamilyPreference
        android:defaultValue="sans-serif-light"
        android:enabled="@bool/has_font_family"
        android:key="theme_font_family"
        android:order="26"
        android:title="@string/font_family"/>

</PreferenceScreen>