<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:key="cat_about"
		android:title="@string/about">
		<de.vanita5.twittnuker.preference.AppVersionPreference/>

		<Preference
			android:summary="@string/project_name"
			android:title="@string/project_account">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="twittnuker://user?user_id=2238101485&amp;finish_only=true"/>
		</Preference>
		<Preference
			android:summary="@string/developer_name"
			android:title="@string/developed_by">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="twittnuker://user?user_id=335920521&amp;finish_only=true"/>
		</Preference>
		<Preference
			android:summary="@string/twidere_developer_name"
			android:title="@string/twidere_developed_by">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="twittnuker://user?user_id=57610574&amp;finish_only=true"/>
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="cat_donate"
		android:title="@string/donate">
		<Preference 
		    android:title="@string/donate_twidere_via_paypal"
		    android:summary="@string/donate_twidere_via_paypal_summary">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=mariotaku.lee%40gmail%2ecom&amp;item_name=Donate%20to%20Twidere"/>
		</Preference>
<!-- 		Twidere Donations / Auskommentiert -->
<!-- 		<Preference -->
<!-- 			android:fragment="de.vanita5.twittnuker.fragment.PayPalDonateFragment" -->
<!-- 			android:summary="@string/pay_via_paypal_summary" -->
<!-- 			android:title="@string/pay_via_paypal"> -->
<!-- 		</Preference> -->
<!-- 		<Preference android:title="@string/donate_via_alipay"> -->
<!-- 			<intent -->
<!-- 				android:action="android.intent.action.VIEW" -->
<!-- 				android:data="https://me.alipay.com/mariotaku"/> -->
<!-- 		</Preference> -->
<!-- 		<Preference -->
<!-- 			android:summary="@string/contributors_list_summary" -->
<!-- 			android:title="@string/donators"> -->
<!-- 			<intent -->
<!-- 				android:action="android.intent.action.VIEW" -->
<!-- 				android:data="twidere://user_list_members?list_id=86301024&amp;user_id=583328497&amp;finish_only=true"/> -->
<!-- 		</Preference> -->
	</PreferenceCategory>
<!-- 	Übersetzen / Auskommentiert-->
<!-- 	<PreferenceCategory -->
<!-- 		android:key="cat_translate" -->
<!-- 		android:title="@string/translate"> -->
<!-- 		<Preference android:title="@string/translate"> -->
<!-- 			<intent -->
<!-- 				android:action="android.intent.action.VIEW" -->
<!-- 				android:data="http://crowdin.net/project/twidere"/> -->
<!-- 		</Preference> -->
<!-- 		<Preference -->
<!-- 			android:summary="@string/contributors_list_summary" -->
<!-- 			android:title="@string/translators"> -->
<!-- 			<intent -->
<!-- 				android:action="android.intent.action.VIEW" -->
<!-- 				android:data="twidere://user_list_members?list_id=99024901&amp;user_id=583328497&amp;finish_only=true"/> -->
<!-- 		</Preference> -->
<!-- 	</PreferenceCategory> -->
	<PreferenceCategory android:title="@string/special_thanks_to">
		<Preference
			android:summary="For the awesome logos"
			android:title="deus_ki">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="twittnuker://user?user_id=1716619506&amp;finish_only=true"/>
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/contact">
	    <Preference 
	        android:summary="@string/mail_summary"
	        android:title="@string/mail">
	        <intent
	            android:action="android.intent.action.VIEW"
	            android:data="mailto:twittnuker@vanita5.de"/>
	    </Preference>
	</PreferenceCategory>
</PreferenceScreen>