<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twittnuker - Twitter client for Android
  ~
  ~ Copyright (C) 2013-2016 vanita5 <mail@vanit.as>
  ~
  ~ This program incorporates a modified version of Twidere.
  ~ Copyright (C) 2012-2016 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@id/reply"
        android:icon="@drawable/ic_action_reply"
        android:title="@string/reply"
        app:showAsAction="always" />
    <item
        android:id="@id/retweet"
        android:icon="@drawable/ic_action_retweet"
        android:title="@string/retweet"
        app:showAsAction="always" />
    <item
        android:id="@id/favorite"
        android:icon="@drawable/ic_action_heart"
        android:title="@string/like"
        app:actionProviderClass="de.vanita5.twittnuker.menu.FavoriteItemProvider"
        app:showAsAction="always" />
    <item
        android:id="@id/love"
        android:icon="@drawable/ic_action_triforce"
        android:title="@string/love"
        app:showAsAction="always" />
    <item
        android:id="@id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@id/copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@android:string/copy" />
    <item
        android:id="@id/add_to_filter"
        android:icon="@drawable/ic_action_speaker_muted"
        android:title="@string/add_to_filter" />
    <item
        android:id="@id/set_color"
        android:icon="@drawable/ic_action_color_palette"
        android:title="@string/set_color" />
    <item
        android:id="@id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        android:visible="false" />
    <item
        android:id="@id/open_in_browser"
        android:icon="@drawable/ic_action_web"
        android:title="@string/open_in_browser" />
    <item
        android:id="@id/copy_url"
        android:icon="@drawable/ic_action_link"
        android:title="@string/copy_link"/>
    <item
        android:id="@id/open_with_account"
        android:icon="@drawable/ic_action_accounts"
        android:title="@string/open_with_account" />

</menu>