<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twittnuker - Twitter client for Android
  ~
  ~ Copyright (C) 2013-2016 vanita5 <mail@vanit.as>
  ~
  ~ This program incorporates a modified version of Twidere.
  ~ Copyright (C) 2012-2016 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/hidden_settings">

    <Preference android:layout="@layout/header_hidden_settings"/>

    <de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="force_using_private_apis"
        android:title="@string/force_using_private_apis"/>
    <de.vanita5.twittnuker.preference.SeekBarDialogPreference
        android:defaultValue="10"
        android:key="connection_timeout"
        android:title="@string/connection_timeout"
        app:max="30"
        app:min="5"
        app:progressTextSuffix="s"/>
    <de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="ignore_ssl_error"
        android:summary="@string/ignore_ssl_error_summary"
        android:title="@string/ignore_ssl_error"/>

    <de.vanita5.twittnuker.preference.AutoFixEditTextPreference
        android:defaultValue="140"
        android:inputType="number"
        android:key="status_text_limit"
        android:title="@string/status_text_limit"/>

    <Preference android:title="@string/settings_wizard">
        <intent
            android:targetClass="de.vanita5.twittnuker.activity.SettingsWizardActivity"
        	android:targetPackage="de.vanita5.twittnuker"/>
    </Preference>

    <Preference android:title="Leaks">
        <intent
            android:targetClass="com.squareup.leakcanary.internal.DisplayLeakActivity"
            android:targetPackage="de.vanita5.twittnuker"/>
    </Preference>
</PreferenceScreen>