<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twittnuker - Twitter client for Android
  ~
  ~ Copyright (C) 2013-2016 vanita5 <mail@vanit.as>
  ~
  ~ This program incorporates a modified version of Twidere.
  ~ Copyright (C) 2012-2016 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/wizard_page_welcome_title">

	<de.vanita5.twittnuker.preference.WizardPageNavPreference
		android:key="next_page"
		android:order="11"
		android:title="@string/wizard_page_welcome_yes"/>
	<de.vanita5.twittnuker.preference.WizardPageNavPreference
		android:key="use_defaults"
		android:order="12"
		android:title="@string/wizard_page_welcome_not_now"/>
    <de.vanita5.twittnuker.preference.WizardPageNavPreference
        android:key="import_settings"
        android:order="13"
        android:title="@string/wizard_page_welcome_import_settings"/>

</PreferenceScreen>